Проиндексированы дополнительные файлы в каталоге src